remove usuario-restaurante facade